add html photo css scrolling on text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instagram feed</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="insta-section">
+    <div class="insta-section-h1">
+      <h1>Découvre notre univers, comprends notre philosophie, suis nous sur insta</h1>
+    </div>
+    <div class="insta-feed">
+      <div class="post post1">
+        <img src="./assets/images/accueil.jpg" alt="photo de la mer">
+      </div>
+      <div class="post post2">
+        <img src="./assets/images/cliffdiving.jpg" alt="photo de la mer">
+      </div>
+      <div class="post post3">
+        <img src="./assets/images/photo1.jpg" alt="photo de la mer">
+      </div>
+      <div class="post post4">
+        <img src="./assets/images/photo2.jpeg" alt="photo de la mer">
+      </div>
+      <div class="post post5">
+        <img src="./assets/images/accueil.jpg" alt="photo de la mer">
+      </div>
 
+    </div>
+
+  </div>
 </body>
 </html>
