add some position of illustration

--- a/index.html
+++ b/index.html
@@ -11,29 +11,72 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <div class="logo">
+      Autodidacte
+    </div>
+    <div class="menu">
+      <ul>
+        <li>Accueil</li>
+        <li>À propos</li>
+        <li>Nous contacter</li>
+      </ul>
+    </div>
+    <div class="cta">
+      <p>C'est parti</p>
+    </div>
+  </header>
   <div class="insta-section">
     <div class="insta-section-h1">
-      <h1>Découvre notre univers, comprends notre philosophie, suis nous sur insta</h1>
+      <h1>Ne te lasse jamais d'apprendre quelque chose de nouveau à chaque fois que tu en as l'occasion.</h1>
     </div>
     <div class="insta-feed">
       <div class="post post1">
         <img src="./assets/images/accueil.jpg" alt="photo de la mer">
+        <img src="./assets/svg/crabe1.svg" alt="crabe">
+        <img src="./assets/svg/poisson1.svg" alt="crabe">
+        <img src="./assets/svg/bulle2.svg" alt="crabe">
       </div>
       <div class="post post2">
         <img src="./assets/images/cliffdiving.jpg" alt="photo de la mer">
+        <img src="./assets/svg/etoile1.svg" alt="crabe">
+        <img src="./assets/svg/bulle1.svg" alt="crabe">
+        <img src="./assets/svg/bulle3.svg" alt="crabe">
       </div>
       <div class="post post3">
         <img src="./assets/images/photo1.jpg" alt="photo de la mer">
+        <img src="./assets/svg/st-jacques.svg" alt="crabe">
+        <img src="./assets/svg/coquillage1.svg" alt="crabe">
+        <img src="./assets/svg/bulle3.svg" alt="crabe">
+        <img src="./assets/svg/bulle1.svg" alt="crabe">
+        <img src="./assets/svg/bulle2.svg" alt="crabe">
       </div>
       <div class="post post4">
         <img src="./assets/images/photo2.jpeg" alt="photo de la mer">
+        <img src="./assets/svg/crabe2.svg" alt="crabe">
+        <img src="./assets/svg/poisson2.svg" alt="crabe">
+        <img src="./assets/svg/bulle2.svg" alt="crabe">
       </div>
       <div class="post post5">
         <img src="./assets/images/accueil.jpg" alt="photo de la mer">
+        <img src="./assets/svg/etoile2.svg" alt="crabe">
+        <img src="./assets/svg/coquillage2.svg" alt="crabe">
+        <img src="./assets/svg/bulle1.svg" alt="crabe">
+        <img src="./assets/svg/bulle3.svg" alt="crabe">
+        <img src="./assets/svg/bulle1.svg" alt="crabe">
+        <img src="./assets/svg/bulle2.svg" alt="crabe">
       </div>
-
     </div>
-
   </div>
+  <div class="section-reservation">
+    <h2>Autodidacte !</h2>
+  </div>
+
+  <div class="section-chef">
+    <img src="./assets/images/photo1.jpg" alt="">
+    <h3>Voici notre chef</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum tempore fugiat eligendi natus labore odit quis provident cupiditate nihil cumque ducimus voluptatibus inventore corporis magnam accusantium suscipit veritatis alias, aliquid ratione ullam soluta quasi! Exercitationem facilis commodi, beatae nisi totam quasi voluptate, labore omnis molestias assumenda quaerat natus velit ipsum? Deleniti reiciendis accusamus velit? Accusantium molestias optio iste explicabo culpa asperiores ratione, ullam et quisquam amet porro voluptate ut fugit dicta ipsum esse iusto molestiae deserunt praesentium. Aperiam qui deleniti consequatur vitae excepturi quaerat ex dicta recusandae repudiandae veritatis accusantium nostrum, sapiente quod possimus eius tempora molestias facilis in perferendis magnam? Officia culpa ducimus, at quisquam, illum vel omnis velit eius unde, quo magnam eaque tempore ut? Soluta laudantium quia molestiae? Velit facere ipsam enim dignissimos deserunt unde quo illum, labore nostrum voluptas minima quam culpa dolorem corporis alias est, itaque nihil non eius. Dicta itaque, mollitia quo placeat, laudantium tenetur assumenda eligendi corporis molestiae enim at unde sunt tempora a! Accusamus excepturi blanditiis, eos libero aut nulla in facilis qui iusto fugit beatae ad quas neque laboriosam autem reprehenderit tempore enim, corporis ipsam magnam nesciunt quod deserunt natus ducimus? Odio, sint impedit. Cum dicta distinctio veniam quos minima molestias! Voluptas culpa, ut architecto exercitationem officia itaque expedita? Temporibus voluptate quasi iusto ut dolores repellat architecto nihil eveniet eum iure, sequi eius labore fugiat soluta at aut eligendi adipisci obcaecati quis. Culpa quae accusantium ipsam maxime nulla laudantium est molestias vero nemo eaque, explicabo unde aliquid delectus minima iste? Voluptatem saepe labore magnam modi? Tenetur ex placeat sint facilis, esse ad aspernatur temporibus alias, eius cumque magni. Iste tempore exercitationem eligendi quo vitae, expedita ducimus. Vel, doloremque pariatur odit commodi culpa suscipit minus dolore porro, dicta cupiditate alias, iste natus possimus sit consectetur esse impedit voluptatibus dolores obcaecati consequuntur unde a expedita labore. Nostrum ullam saepe nemo, impedit aut omnis. Quas iure non quae, sint ab provident incidunt minus consequatur! Natus consectetur recusandae voluptate ut dolorum voluptatibus odit quae in quas corporis minus maxime modi ipsam necessitatibus a architecto distinctio eos laudantium dolores, officia possimus debitis quidem quo. Non enim doloremque praesentium eveniet saepe dolorum officia magni repudiandae, provident ipsam minima odio ipsa vero laborum laudantium consequuntur maiores! Quae asperiores sunt tempore quia exercitationem minima reprehenderit odio optio, omnis velit quibusdam sequi illo? Vero deserunt, similique natus illo nostrum minus omnis fugit impedit beatae mollitia reiciendis provident, nulla cupiditate ea veritatis eaque autem aliquid voluptatum nesciunt voluptate! Eos, ex! Quia natus error praesentium animi modi impedit, excepturi accusamus ipsam. Debitis cupiditate, ducimus adipisci dolor quis vitae necessitatibus aspernatur. Nisi debitis modi, quo natus dolorem corporis possimus quis? Pariatur, quae totam tempora eos tenetur nisi sed aspernatur obcaecati dicta molestiae, deleniti blanditiis voluptates fugit molestias veniam explicabo temporibus reiciendis! Delectus dignissimos esse modi earum molestias in numquam qui eveniet veritatis distinctio voluptas, eligendi, repellendus corrupti. Voluptatum id accusantium placeat unde nostrum sint laboriosam doloribus quos necessitatibus qui a voluptatem nam quas fugiat quam repellat explicabo nulla voluptas, sapiente modi, nemo cum!</p>
+  </div>
+
 </body>
 </html>
